--- a/popup.css
+++ b/popup.css
@@ -4,7 +4,6 @@
   padding: 0;
 }
 body, html {
-  /* height: 100%; */
   max-height: 600px;
   overflow: hidden;
   min-width: 500px;
@@ -22,6 +21,7 @@ body, html {
   font-size: 17px;
   width: 25%;
   border-bottom: 5px solid #555;
+  font-family: 'Roboto', sans-serif;
 }
 
 .tablink:hover {
@@ -52,19 +52,34 @@ body, html {
 #Length {background-color: #0288D18f;} /*light blue 700*/
 #Speed {background-color: #FFCA288f;} /*amber 400*/
 
+#Weight label {background-color: #EF5350;}
+#Temperature label {background-color: #43A047;}
+#Length label {background-color: #0288D1;}
+#Speed label {background-color: #FFCA28;}
+
+#Weight input {border-color: #EF5350;}
+#Temperature input {border-color: #43A047;}
+#Length input {border-color: #0288D1;}
+#Speed input {border-color: #FFCA28;}
+
 label {
   font-size: 16px;
-  margin-bottom: 4px;
-  display: block;
-  font-weight: bold;
+  line-height: 24px;
+  padding: 0 3px;
 }
 input {
   border: 1px solid #ccc;
+  border-bottom-width: 3px;
   padding: 8px;
   display: block;
   width: 100%;
   margin-bottom: 16px;
+  outline: none;
+  background-color: #fbfbfbf0;
+  box-shadow: 0px 3px 8px 0px #0000001c;
+  color: #555;
+  font-family: 'Roboto', sans-serif;
 }
-/* input:last-child {
-  margin-bottom: 40px;
-} */
+input:focus {
+  background-color: #fbfbfba1;
+}
